# classic_mac

./: .gitignore  README.md  build.sh  build_all.sh  create_makefile.sh  create_new_project.sh  launch_vmac.sh
hfs-editor/: hfs_tool.sh
projects/dialog_menu/: CMakeLists.txt
projects/gui_test/: CMakeLists.txt  gui_test.c
projects/hello_world/: CMakeLists.txt  Makefile
projects/hmls-base64/: CMakeLists.txt  base64.c  hmls-base64.c
projects/hmls-bip39/: CMakeLists.txt  hmls-bip39.cpp
projects/hmls-bip39/bip39/: bip39.h  word_list.h
projects/hmls-dialog_menu/: CMakeLists.txt  hmls-dialog_menu.c  hmls-dialog_menu.r  hmls_dialog_menu.r
projects/hmls-hello_world/: CMakeLists.txt  hmls-hello_world.c
projects/hmls-maths/: CMakeLists.txt  hmls-maths.c
projects/hmls-string_test/: CMakeLists.txt  hmls-string_test.c
projects/hmls-string_test_cpp/: CMakeLists.txt  hmls-string_test_cpp.cc
projects/hmls-txt_parse/: CMakeLists.txt  hmls-txt_parse.c
projects/hmls_dialog_menu/: CMakeLists.txt  hmls_dialog_menu.r
projects/launcher/: CMakeLists.txt  Launcher.c
projects/mpw_tool/: CMakeLists.txt
projects/raytracer/: CMakeLists.txt  Makefile
projects/system_extension/: CMakeLists.txt
projects/test_apps/: CMakeLists.txt  ExceptionTest.cc
projects/window_types/: CMakeLists.txt  window_types.r  window_typesshell.c  window_typesshell.r
